# artifacts/api-server/src/routes/index.ts
@@ -7,6 +7,7 @@ import earningsRouter from "./earnings";
 import leaderboardRouter from "./leaderboard";
 import productsRouter from "./products";
 import withdrawalsRouter from "./withdrawals";
+import depositsRouter from "./deposits";
 import networkRouter from "./network";
 import adminRouter from "./admin";
 import referralsRouter from "./referrals";
@@ -21,6 +22,7 @@ router.use(earningsRouter);
 router.use(leaderboardRouter);
 router.use(productsRouter);
 router.use(withdrawalsRouter);
+router.use(depositsRouter);
 router.use(networkRouter);
 router.use(adminRouter);
 router.use(referralsRouter);
